2009-02-02  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayprojectspanel.vala:

	Improved item and project selection.

2009-02-02  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayprojectspanel.vala:

	Added Project.selected and Project.item_selected signals.

2009-02-02  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayproject.vala:

	Added get_items method to return a list of child items.

2009-02-01  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayproject.vala:
	*  watray/watrayprojectspanel.vala:
	*  watray/Makefile.am:

	Use Value instead of ItemInfo to hold the data of the item.

2009-01-30  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watraysimple/simpleplugin.vala:
	*  watray/watraymainwindow.vala:
	*  watray/watraymainwindowinterface.vala:
	*  ui/ui.xml:
	*  po/es.po:

	Improve menu and toolbar managment using UIManager.

2009-01-27  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watraysimple/simpledocumentview.vala:

	Changed TextView font to Monospace 10 by default.

2009-01-26  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  configure.ac:
	*  watray-1.0.pc.in:
	*  Makefile.am:

	Added watray-1.0.pc for pkg-config

2009-01-26  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayproject.vala:
	*  watray/watrayprojectspanel.vala:
	*  watray/watrayiteminfo.vala:
	*  watray/Makefile.am:

	Use ItemInfo instead of void* to hold the data of the item.

2009-01-25  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayproject.vala:
	
	Added empty_item method.
	Improved remove_item and remove_project methods using empty_item.
	
	*  watray/watraypluginmanagerview.vala:

	Use get_iter_from_string instead of a new TreePath.

2009-01-25  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayplugininterface.vala:
	*  watray/watraypluginmanagerview.vala:
	*  watray/watrayplugin.vala:

	Added configure support for plugins.
